fix: #1657 Fix preview apps page container position on IE11

--- a/packages/marketplace/src/styles/blocks/standalone-app-detail.scss
+++ b/packages/marketplace/src/styles/blocks/standalone-app-detail.scss
@@ -43,14 +43,13 @@
     flex-direction: column-reverse;
   }
   @include for-ie-only {
-    width: 100%;
+    min-width: 1024px;
   } 
 }
 
 .flexContainer {
   @include for-ie-only {
     align-self: center;
-    min-width: 1024px;
   }
 }
 
